fixed overflow width

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
 body {
-    margin: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -109,7 +108,7 @@ body {
 
 .scroll-buttons-wrapper{
     position: absolute;
-    bottom: 5px;
+    bottom: px;
     font-weight: bold;
 }
 
